<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="40dp"
    android:gravity="center"
    android:background="@color/bg_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/main_title"
        android:textColor="@color/primary"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="10dp"
        android:textSize="70sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/titleSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/subtitle"
        android:textColor="@color/primary"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btn_live_scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/button_live_rack_scan"
        android:background="@drawable/btn_primary"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/btn_merge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/button_barcode_merging"
        android:background="@drawable/btn_primary"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/btn_finder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/button_sample_finder"
        android:background="@drawable/btn_primary"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/btn_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:background="@drawable/btn_secondary"
        android:padding="12dp"
        android:text="@string/about_app"
        android:textAllCaps="false"
        android:textColor="@color/primary"
        android:textSize="15sp" />

</LinearLayout>