<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main" >

    <!-- Toolbar -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_sample_finder"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/bg_main"
        app:navigationIcon="@drawable/outline_keyboard_double_arrow_left_24" />

    <!-- Scrollable content area -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:background="@color/bg_main"
        android:padding="16dp" >

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_main"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="24dp">

            <!-- Title -->
            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_sample_finder"
                android:textColor="@color/primary"
                android:gravity="center"
                android:layout_marginTop="60dp"
                android:textSize="70sp"
                android:textStyle="bold"
                android:layout_marginBottom="50dp" />


            <Button
                android:id="@+id/btn_pick_rack_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/btn_primary"
                android:padding="12dp"
                android:text="@string/button_select_rack_image"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/btn_pick_excel_file"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/btn_primary"
                android:padding="12dp"
                android:text="@string/button_select_excel_file"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                tools:ignore="VisualLintButtonSize" />


            <Button
                android:id="@+id/btn_run_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/btn_primary"
                android:padding="12dp"
                android:text="@string/button_find_sample"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                tools:ignore="VisualLintButtonSize" />


            <Button
                android:id="@+id/btn_run_whole_plate_annotation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/btn_primary"
                android:padding="12dp"
                android:text="@string/button_annotate_whole_plate"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/btn_export_excel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/btn_primary"
                android:padding="12dp"
                android:text="@string/button_export_excel"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                tools:ignore="VisualLintButtonSize" />

        </LinearLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
