<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main" >

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_barcode_merging"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/bg_main"
        app:navigationIcon="@drawable/outline_keyboard_double_arrow_left_24" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:background="@color/bg_main"
        android:padding="16dp">

         <LinearLayout
             android:id="@+id/container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="24dp"
             android:background="@color/bg_main"
             android:gravity="center">


    <!-- Title -->
            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_barcode_merging"
                android:textColor="@color/primary"
                android:gravity="center"
                android:layout_marginTop="60dp"
                android:textSize="70sp"
                android:textStyle="bold"
                android:layout_marginBottom="50dp" />

            <Button
                android:id="@+id/btn_select_images"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="12dp"
                android:text="@string/button_select_images"
                android:background="@drawable/btn_primary"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/btn_select_excel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="12dp"
                android:text="@string/button_select_excel_file"
                android:background="@drawable/btn_primary"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/btn_run_merge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_merge"
                android:background="@drawable/btn_primary"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:layout_marginTop="16dp"
                android:padding="12dp"
                tools:ignore="VisualLintButtonSize" />

             <Button
                 android:id="@+id/btn_export_excel"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:padding="12dp"
                 android:text="@string/button_export_excel"
                 android:background="@drawable/btn_primary"
                 android:textAllCaps="false"
                 android:textColor="@android:color/white"
                 android:textSize="18sp"
                 tools:ignore="VisualLintButtonSize" />


         </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
